ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:														  \
|		 - GUI:													  |
|				* to fix: no errors on adding user (custom HP)	  |
\_________________________________________________________________/

2007-11-28 Christian Hernmarck
	- ENGINE:
		* Fixed #898: Error on ispcp-vrl-traff - another try...
		
2007-11-27 Benedikt Heintel
	- ENGINE:
		* Fixed #898: Error on ispcp-vrl-traff
	- TOOLS:
		* Fixed #879: Can't login via net2ftp

2007-11-27 Christian Hernmarck
    - GUI:
        * Fixed #897: email exists already... (Aliase + Subdomain)

2007-11-26 Benedikt Heintel
	- ENGINE:
		* Fixed #898: Error on ispcp-vrl-traff

2007-11-25 Christian Hernmarck
    - GUI:
        * Fixed #830: Switch in user as reseller does not work correct

2007-11-25 Raphael Geissert
    - ENGINE:
        * Fixed #856: traffic data files in apache's log subdirectory

2007-11-21 Benedikt Heintel
	- CONFIGS:
		* Fixed #891: missing CMD_BZIP in freebsd & openbsd
		* Fixed #834: Stats directory should be skipped by awstats
	- ENGINE:
		* Fixed #890: ispcp_setup: Debug mode not able to turn off (trunk)
		* Fixed #892: change hardcoded touch command in backup-all
	- TOOLS:
		* Update PHPmyAdmin to version 2.11.2.2

2007-11-18 Raphael Geissert
    - ENGINE:
        * Fixed #875: don't put the whole traffic logs in memory while counting traffic

2007-11-17 Benedikt Heintel
	- TOOLS:
		* Update ADOdb to version 4.96a
		* Update Net2FTP to version 0.96
		* Update PHPmyAdmin to version 2.11.2.1

2007-11-15 Benedikt Heintel
	- SETUP:
		* Fixed folder owner of fcgi master folder

2007-11-12 Johannes Schobig
	- CONFIGS:
		* Some improvements in Postfix's main.cf (Thanks to rbtux)

2007-11-11 Johannes Schobig
	- SETUP:
		* Fixed #866: Installation don't starts
	- CONFIGS:
		* Fixed #825: Added permit_* rules in Postfix's main.cf
	- ENGINE:
		* Fixed undeclared variables in ispcp-mbox-mngr
