@@ -102,6 +102,6 @@
    </div>
   </div>
 
-  <div id="bottom"><p class="login"><a href="http://jigsaw.w3.org/css-validator/"><img style="border:0;width:80px;height:15px" src="./images/valid_css.jpg" alt="Valid CSS!" /></a>&nbsp;<a href="http://validator.w3.org/check?uri=referer"><img src="./images/valid_xhtml.jpg" alt="Valid XHTML 1.0 Strict" style="border:0;width:80px;height:15px" /></a></p></div>
+  <div id="bottom"><p class="login"><a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:80px;height:15px" src="./images/valid_css.jpg" alt="Valid CSS!" /></a>&nbsp;<a href="http://validator.w3.org/check?uri=referer"><img src="./images/valid_xhtml.jpg" alt="Valid XHTML 1.0 Strict" style="border:0;width:80px;height:15px" /></a></p></div>
  </body>
 </html>
