@@ -17,6 +17,6 @@
     <h3>Internal Server Error!</h3>
    </div>
   </div>
-  <div id="bottom"><p class="login"><a href="http://jigsaw.w3.org/css-validator/"><img style="border:0;width:80px;height:15px" src="/errors/inc/valid_css.jpg" alt="Valid CSS!" /></a>&nbsp;<a href="http://validator.w3.org/check?uri=referer"><img src="/errors/inc/valid_xhtml.jpg" alt="Valid XHTML 1.0 Strict" style="border:0;width:80px;height:15px" /></a></p></div>
+  <div id="bottom"><p class="login"><a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:80px;height:15px" src="/errors/inc/valid_css.jpg" alt="Valid CSS!" /></a>&nbsp;<a href="http://validator.w3.org/check?uri=referer"><img src="/errors/inc/valid_xhtml.jpg" alt="Valid XHTML 1.0 Strict" style="border:0;width:80px;height:15px" /></a></p></div>
  </body>
 </html>
