@@ -15,6 +15,6 @@
     <span class="path">Your request could not be completed because the customer's bandwidth limit was reached. This limit is reset weekly so you might want to try again in a few days.</span>
    </div>
   </div>
-  <div id="bottom"><p class="login"><a href="http://jigsaw.w3.org/css-validator/"><img style="border:0;width:80px;height:15px" src="./inc/valid_css.jpg" alt="Valid CSS!" /></a>&nbsp;<a href="http://validator.w3.org/check?uri=referer"><img src="/errors/inc/valid_xhtml.jpg" alt="Valid XHTML 1.0 Strict" style="border:0;width:80px;height:15px" /></a></p></div>
+  <div id="bottom"><p class="login"><a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:80px;height:15px" src="./inc/valid_css.jpg" alt="Valid CSS!" /></a>&nbsp;<a href="http://validator.w3.org/check?uri=referer"><img src="/errors/inc/valid_xhtml.jpg" alt="Valid XHTML 1.0 Strict" style="border:0;width:80px;height:15px" /></a></p></div>
  </body>
 </html>
